[FCC-126] - Branches admin page (#20)
