# config/routes.rb
@@ -32,7 +32,7 @@ Rails.application.routes.draw do
 
       resources :organizations, only: %i[index show create update]
 
-      resources :branches, only: %i[index]
+      resources :branches, only: %i[index show create update]
 
       resources :users, only: %i[index show create update destroy] do
         collection do
